--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -3,7 +3,8 @@
     Dishes
     <a href="/dishes/new" class="btn btn-lg btn-success">New Dish</a>
   </h1>
-</div><div class="row mb-1">
+</div>
+<div class="row mb-1">
   <div class="col-md-12">
     <%= search_form_for @q, :class => "collapse", :id => "dishes_filters" do |f| %>
       <p class="lead">Narrow results:</p>
@@ -87,14 +88,38 @@
   <div class="col-md-12">
     <table class="table table-striped table-hover">
       <tr>
-        <th>Name</th>
+        <th>The very best...</th>
+        <th>is at...</th>
         <th>Cuisine</th>
         <th>Actions</th>
       </tr>
 
       <% @dishes.each do |dish| %>
       <tr>
-        <td><%= dish.name %></td>
+        <td>
+          <a href="/dishes/<%= dish.id %>"><%= dish.name %></a>
+          </td>
+          <td>
+            <form action="/create_bookmark" class="form-inline" method="post">
+              <input type="hidden" name="dish_id" value="<%= dish.id %>">
+              <input type="hidden" name="user_id" value="<%= Bookmark.find(dish.id).user_id %>">
+               <label for="venue_id" class="control-label sr-only">
+                  Venue
+                </label>
+                <select name="venue_id" id="venue_id" class="form-control form-control-sm mr-sm-1">
+                  <% Venue.all.each do |venue| %>
+                  <% if Bookmark.where(user_id: current_user.id, venue_id: venue.id, dish_id: dish.id).count == 1 %>
+                  <option value="<%= venue.id %>" selected="selected"><%= venue.name %></option>
+                <% else %>
+                  <option value="<%= venue.id %>"><%= venue.name %></option>
+                  <% end %>
+                  <% end %>
+                </select>
+                <button class="btn btn-primary btn-sm">
+                  <i class="fa fa-heart"></i>
+                </button>
+              </form>
+          </td>
         <td>
           <% if dish.cuisine.present? %>
             <a href="/cuisines/<%= dish.cuisine.id %>">
