--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -90,3 +90,7 @@
     <%= paginate @dishes, theme: 'twitter-bootstrap-4' %>
   </div>
 </div>
+
+<a href="/venues/new" class="btn btn-block btn-success">
+      Add a new venue
+</a>
