--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,41 +1,40 @@
-<div class="page-header">
-  <h1>
-    Venues
-    <a href="/venues/new" class="btn btn-lg btn-success">New Venue</a>
-  </h1>
-</div><div class="row mb-1">
-  <div class="col-md-12">
-    <%= search_form_for @q, :class => "collapse", :id => "venues_filters" do |f| %>
-      <p class="lead">Narrow results:</p>
+<!--main container-->
+<div class="container mt-4">
+  <!--container sizing -->
+  <div class="row mt-2 mb-1">
+    <!--left side filter collapse down -->
+    <div class="col-md-3">
+      <%= search_form_for @q, :class => "collapse", :id => "venues_filters" do |f| %>
+        <p class="lead">Narrow results:</p>
 
         <div class="form-group">
-    <%= f.label :name_cont, "Name contains" %>
-    <%= f.text_field :name_cont, :class => "form-control", :placeholder => "Name contains" %>
-  </div>
+          <%= f.label :name_cont, "Name contains" %>
+          <%= f.text_field :name_cont, :class => "form-control", :placeholder => "Name contains" %>
+        </div>
 
-<div class="form-group">
+        <div class="form-group">
           <%= f.label :created_at, "Created at" %>
           <div class="row">
             <div class='col-md-6 mb-1'>
               <div class='input-group date' id='created_atgteqPicker'>
-                  <%= f.text_field :created_at_gteq, :class => "form-control", :placeholder => "Created at greater than or equal to" %>
-                  <span class="input-group-addon">
-                      <span class="glyphicon glyphicon-calendar"></span>
-                  </span>
+                <%= f.text_field :created_at_gteq, :class => "form-control", :placeholder => "Created at greater than or equal to" %>
+                <span class="input-group-addon">
+                  <span class="glyphicon glyphicon-calendar"></span>
+                </span>
               </div>
             </div>
 
             <div class='col-md-6'>
               <div class='input-group date' id='created_atlteqPicker'>
-                  <%= f.text_field :created_at_lteq, :class => "form-control", :placeholder => "Created at less than or equal to" %>
-                  <span class="input-group-addon">
-                      <span class="glyphicon glyphicon-calendar"></span>
-                  </span>
+                <%= f.text_field :created_at_lteq, :class => "form-control", :placeholder => "Created at less than or equal to" %>
+                <span class="input-group-addon">
+                  <span class="glyphicon glyphicon-calendar"></span>
+                </span>
               </div>
             </div>
           </div>
-      </div>
-      <script type="text/javascript">
+        </div>
+        <script type="text/javascript">
           $(function () {
               $('#created_atgteqPicker').datetimepicker({
                   format: 'YYYY-MM-DD hh:mm:SS'
@@ -51,79 +50,86 @@
                   $('#created_atgteqPicker').data("DateTimePicker").maxDate(e.date);
               });
           });
-      </script>
+        </script>
 
         <div class="form-group">
-      <%= f.label :bookmarks_notes_cont, "Bookmark notes contains" %>
-      <%= f.text_field :bookmarks_notes_cont, :class => "form-control", :placeholder => "Bookmark notes contains" %>
-    </div>
+          <%= f.label :bookmarks_notes_cont, "Bookmark notes contains" %>
+          <%= f.text_field :bookmarks_notes_cont, :class => "form-control", :placeholder => "Bookmark notes contains" %>
+        </div>
 
-<div class="form-group">
-      <%= f.label :neighborhood_name_cont, "Neighborhood name contains" %>
-      <%= f.text_field :neighborhood_name_cont, :class => "form-control", :placeholder => "Neighborhood name contains" %>
-    </div>
+        <div class="form-group">
+          <%= f.label :neighborhood_name_cont, "Neighborhood name contains" %>
+          <%= f.text_field :neighborhood_name_cont, :class => "form-control", :placeholder => "Neighborhood name contains" %>
+        </div>
 
-<div class="form-group">
-      <%= f.label :fans_username_cont, "User username contains" %>
-      <%= f.text_field :fans_username_cont, :class => "form-control", :placeholder => "User username contains" %>
-    </div>
+        <div class="form-group">
+          <%= f.label :fans_username_cont, "User username contains" %>
+          <%= f.text_field :fans_username_cont, :class => "form-control", :placeholder => "User username contains" %>
+        </div>
 
-<div class="form-group">
-      <%= f.label :specialties_name_cont, "Dish name contains" %>
-      <%= f.text_field :specialties_name_cont, :class => "form-control", :placeholder => "Dish name contains" %>
-    </div>
+        <div class="form-group">
+          <%= f.label :specialties_name_cont, "Dish name contains" %>
+          <%= f.text_field :specialties_name_cont, :class => "form-control", :placeholder => "Dish name contains" %>
+        </div>
 
-      <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
+        <%= f.submit :class => "btn btn-primary btn-block mb-1" %>
 
-      <a href="/venues" class="btn btn-secondary btn-block mb-1">Clear filters</a>
-    <% end %>
-    <a class="btn btn-secondary btn-block mb-1" data-toggle="collapse" href="#venues_filters">
-      Show Filters
-    </a>
-  </div>
-</div>
-
-
-<div class="row m-b-2">
-  <div class="col-md-12">
-    <div>
-      <div id="location_map" style="height: 480px;"></div>
-    </div>
-  </div>
-</div>
-
-<div class="row">
-  <div class="col-md-12">
-    <table class="table table-striped table-hover">
-      <tr>
-        <th>Name</th>
-        <th>Address</th>
-        <th>Neighborhood</th>
-        <th>Actions</th>
-      </tr>
-
-      <% @venues.each do |venue| %>
-      <tr>
-        <td><%= venue.name %></td>
-        <td><%= venue.address %></td>
-        <td>
-          <% if venue.neighborhood.present? %>
-            <a href="/neighborhoods/<%= venue.neighborhood.id %>">
-              <%= venue.neighborhood.name %>
-            </a>
-          <% end %>
-        </td>
-        <td>
-          <a href="/venues/<%= venue.id %>" class="btn btn-primary">Show</a>
-          <a href="/venues/<%= venue.id %>/edit" class="btn btn-warning">Edit</a>
-          <a href="/delete_venue/<%= venue.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
-        </td>
-      </tr>
+        <a href="/venues" class="btn btn-secondary btn-block mb-1">Clear filters</a>
       <% end %>
-    </table>
-    <%= paginate @venues, theme: 'twitter-bootstrap-4' %>
+      <a class="btn btn-secondary btn-block mb-1" data-toggle="collapse" href="#venues_filters">
+        Show Filters
+      </a>
+    </div>
+    <!--end left column collapse down-->
+    <!--middle column venue content-->
+    <div class="col-md-6">
+      <div class="card">
+        <!--card title-->
+        <div class="card-header">
+          <h4 class="card-title">Places you've bookmarked</h4>
+        </div>
+        <!--google map-->
+        <div class="card-body">
+          <div>
+            <div id="location_map" style="height: 480px;"></div>
+          </div>
+        </div>
+        <!--list of venues-->
+        <table class="table table-striped table-hover">
+          <tr>
+            <th>Name</th>
+            <th>Neighborhood</th>
+          </tr>
+
+          <% @venues.each do |venue| %>
+            <tr>
+              <td><a href="/venues/<%=venue.id %>"><%= venue.name %></a></td>
+              <td>
+                <% if venue.neighborhood.present? %>
+                  <a href="/neighborhoods/<%= venue.neighborhood.id %>">
+                    <%= venue.neighborhood.name %>
+                  </a>
+                <% end %>
+              </td>
+              <!--<td>-->
+              <!--  <a href="/venues/<#%= venue.id %>" class="btn btn-primary">Show</a>-->
+              <!--  <a href="/venues/<#%= venue.id %>/edit" class="btn btn-warning">Edit</a>-->
+              <!--  <a href="/delete_venue/<#%= venue.id %>" class="btn btn-danger" rel="nofollow">Delete</a>-->
+              <!--</td>-->
+            </tr>
+          <% end %>
+        </table>
+        <%= paginate @venues, theme: 'twitter-bootstrap-4' %>
+      </div>
+    </div>
+    <!--end middle column very best content-->
+    <!--right column new buttons-->
+    <div class="col-md-3">
+      <a href="/venues/new" class="btn btn-lg btn-success">Add a new venue</a>
+    </div>
   </div>
 </div>
+
 
 <script src="//maps.google.com/maps/api/js?v=3.24&key=AIzaSyCOTPWiuvyyo6sKoIBzKA4-1ol-vTOIOlM"></script>
 <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
